# notesmd

./: Cargo.toml  README.md
.github/.github/: PULL_REQUEST_TEMPLATE.md
src/: main.rs
src/core/: mod.rs  notesmd.rs  sheet.rs
src/layout/: build_ui.rs  mod.rs
src/layout/edit/: mod.rs  style.rs
src/layout/toolbar/: mod.rs
src/layout/view/: mod.rs  style.rs
